--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,3 +1,5 @@
+@use 'src/assets/scss/colors';
+
 :host {
   display: block;
 }
@@ -5,6 +7,6 @@
 header {
   width: 100vw;
   height: 4rem;
-  background-color: salmon;
+  background-color: colors.$yellow;
   box-shadow: 0px 10px 15px 6px rgba(0,0,0,0.1);
 }
