--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -1,3 +1,5 @@
+@use 'src/assets/scss/colors';
+
 :host {
   display: block;
 }
@@ -8,7 +10,7 @@
   border-radius: 1rem;
   object-fit: cover;
   box-shadow: 0px 0px 42px -9px rgba(0,0,0,0.1);
-  border: 0.3rem solid #fa8072;
+  border: 0.3rem solid colors.$yellow;
 }
 
 .content-img {
