--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,6 +6,7 @@ section {
     justify-content: center;
     align-items: flex-start;
     margin: 6rem 1.5rem 0 1.5rem;
+    height: 100dvh;
     /*background-color: #f0f0ff;*/
 }
 
