--- a/src/app/main-content/pages/projects/projects.component.html
+++ b/src/app/main-content/pages/projects/projects.component.html
@@ -15,15 +15,17 @@
 
 <main class="projects">
   <section class="projects-container">
-    <div class="card" *ngFor="let item of [1,2,3,4,5,6,4,7,9,8]">
-      <img src="assets/imgs/garou.webp" alt="Avatar" class="avatar" loading="lazy">
-      <h2>Daniel</h2>
-      <p>Desarrollador Full Stack</p>
-      <div class="social-links">
-        <a href="#"><i class="fab fa-linkedin"></i></a>
-        <a href="#"><i class="fab fa-github"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
+    @for (item of [1,2,3,4,5,6,4,7,9,8]; track item) {
+      <div class="card">
+        <img src="assets/imgs/garou.webp" alt="Avatar" class="avatar" loading="lazy">
+        <h2>Daniel</h2>
+        <p>Desarrollador Full Stack</p>
+        <div class="social-links">
+          <a href="#"><i class="fab fa-linkedin"></i></a>
+          <a href="#"><i class="fab fa-github"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+        </div>
       </div>
-   </div>
+    }
   </section>
 </main>
