--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,12 +1,18 @@
 @use 'src/assets/scss/colors';
 
+:host {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 section {
     display: flex;
     gap: 2rem;
     justify-content: center;
     align-items: flex-start;
     margin: 6rem 1.5rem 0 1.5rem;
-    height: 100dvh;
+    flex-grow: 1;
     /*background-color: #f0f0ff;*/
 }
 
@@ -17,7 +23,6 @@ section {
     box-shadow: 0px 10px 37px -9px rgba(0,0,0,0.75);
     -webkit-box-shadow: 0px 10px 37px -9px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 10px 37px -9px rgba(0,0,0,0.75);
-    overflow: visible;
 }
 
 aside {
@@ -25,6 +30,7 @@ aside {
     position: sticky;
     position: -webkit-sticky;
     top: 6rem;
+    overflow: visible;
 }
 
 main {
@@ -36,4 +42,26 @@ nav {
     position: sticky;
     position: -webkit-sticky;
     top: 1rem;
+}
+
+@media screen and (max-width: 1200px) {
+    aside {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    nav {
+        display: none;
+    }
+
+    main {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    section {
+        margin-top: 1rem;
+    }
 }
