--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -48,20 +48,35 @@ nav {
     aside {
         display: none;
     }
+
+    .content {
+        width: auto;
+    }
 }
 
 @media screen and (max-width: 992px) {
-    nav {
-        display: none;
+    section {
+        flex-direction: column;
+        align-items: stretch;
+    }
+
+    aside, nav {
+        display: block;
+        position: static;
+        width: 100%;
     }
 
     main {
         width: 100%;
     }
+
+    .content {
+        width: auto;
+    }
 }
 
 @media screen and (max-width: 768px) {
-    section {
-        margin-top: 1rem;
+    .content {
+        width: auto;
     }
 }
