--- a/src/app/main-content/pages/experience/experience.component.scss
+++ b/src/app/main-content/pages/experience/experience.component.scss
@@ -1,4 +1,3 @@
-
 @use 'src/assets/scss/colors';
 
 header {
@@ -9,51 +8,6 @@ header {
     padding: 1rem;
   }
 }
-/*
-
-/*.main {
-  display: flex;
-  row-gap: 16px;
-  text-align: center;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  margin: 26px;*/
-/*   position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);   */
-// }
-
-/*
-main {
-  .home-content {
-    max-width: 600px;
-    padding: 16px;
-    border-radius: 16px;
-    margin: 0 auto;
-    //box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    // background-color: colors.$gray;
-    display: grid;
-    gap: 16px;
-    justify-content: center;
-    align-items: center;
-
-    p {
-      font-family: victor;
-      text-align: left;
-      color: colors.$gray;
-      line-height: normal;
-    }
-  }
-}
-*/
-
-
-
-
-
-/** FOOTER */
 
 footer {
   margin: 16px;
@@ -223,4 +177,67 @@ footer {
   bottom: -20px;
   border: 6px solid white;
   box-shadow: 0 3px 10px rgba(0,0,0,0.2);
+}
+
+/* Responsive */
+@media screen and (max-width: 768px) {
+  .timeline {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+  }
+
+  .timeline::before {
+    visibility: hidden;
+  }
+
+  .timeline-item {
+    position: static;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+  }
+
+  .left, .right {
+    left: unset;
+  }
+
+  .left .timeline-content::before, .right .timeline-content::before {
+    display: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  .left .timeline-dot, .right .timeline-dot {
+    display: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  .timeline-dot {
+    display: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  .timeline-end {
+    display: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  .timeline-content {
+    padding: .8rem;
+  }
+
+  .timeline-date {
+    font-size: 1.6em;
+  }
+
+  .timeline-title {
+    font-size: 1.15em;
+  }
 }
