--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,17 @@
 <header>
-    Header HEADER
+<!--   <div class="header-container">
+    <div class="logo-container">
+      <img src="assets/icons/profile/logo_with_border.svg" alt="Logo" class="logo">
+      <span class="title">John Doe</span>
+    </div>
+    <div class="social-links">
+      <a href="https://github.com" target="_blank" aria-label="GitHub"><img src="assets/icons/iconfinder_github_icon.svg" alt="GitHub"></a>
+      <a href="https://linkedin.com" target="_blank" aria-label="LinkedIn"><img src="assets/icons/iconfinder_linkedin_icon.svg" alt="LinkedIn"></a>
+    </div>
+    <button class="hamburger-menu" aria-label="Open menu">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
+  </div> -->
 </header>
