--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,35 +1,32 @@
+<div class="profile-card">
+  <figure class="profile-card__figure">
+    <img class="profile-card__image" src="assets/imgs/garou.webp" alt="Profile Picture">
+  </figure>
 
-
-
-<section class="content-img">
-    <picture>
-        <img id="img-profile" src="assets/imgs/garou.webp" alt="">
-    </picture>
-</section>
-
-
-<header id="profile-header">
-    <h2>Henrry Gutierrez</h2>
-    <div class="subtitle-container">
-        <h3>Software Engineer</h3>
+  <header class="profile-card__header">
+    <h2 class="profile-card__name">Henrry Gutierrez</h2>
+    <div class="profile-card__title-wrapper">
+      <h3 class="profile-card__title">Software Engineer</h3>
     </div>
-    <div class="social-media-container">
-        @for (item of socialMediaItems; track $index) {
-            <!--<a href="http://"> <span [ngClass]="item.icon">icon</span> </a>-->
-            <img class="icon-img" [src]="item.icon" alt="">
-        }
+    <div class="profile-card__social">
+      @for (item of socialMediaItems; track $index) {
+        <a [href]="item.url" class="profile-card__social-link">
+          <img [src]="item.icon" alt="" class="profile-card__social-icon">
+        </a>
+      }
     </div>
-</header>
+  </header>
 
+  <hr class="profile-card__divider">
 
-<main id="profile-container">
+  <div class="profile-card__info">
     @for (item of informationItems; track $index) {
-        <div class="information-container">
-            <img class="icon-img" [src]="item.icon" alt="" [title]="item.title">
-            <!-- <div class="detail-container">
-                <span class="">{{item.title}}</span>
-            </div> -->
+      <div class="profile-card__info-item">
+        <img class="profile-card__info-icon" [src]="item.icon" alt="">
+        <div class="profile-card__info-details">
+          <span class="profile-card__info-title">{{item.title}}</span>
         </div>
-
+      </div>
     }
-</main>
+  </div>
+</div>
