--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -4,92 +4,142 @@
   display: block;
 }
 
-#img-profile {
-  height: 9rem;
-  width: 12rem;
-  border-radius: 1rem;
-  object-fit: cover;
-  box-shadow: 0px 0px 42px -9px rgba(0,0,0,0.1);
-  border: 0.3rem solid colors.$yellow;
-}
-
-.content-img {
-  display: flex;
-  justify-content: center;
-  margin-top: -6rem;
-}
-
-p {
-  line-height: normal;
-}
-
-#profile-header {
-  /*margin: 1rem 0;*/
+.profile-card {
   display: flex;
   flex-direction: column;
-  row-gap: 1rem;
   align-items: center;
+  text-align: center;
 
-  h2 {
-    margin: .5rem;
-    font-size: x-large;
+  &__figure {
+    margin: 0;
+    margin-top: -6rem; // To pull the image up
   }
 
-  .subtitle-container {
-    padding: 0 .5rem;
-    background: colors.$yellow;
-    border-radius: .2rem;
+  &__image {
+    height: 9rem;
+    width: 12rem;
+    border-radius: 1rem;
+    object-fit: cover;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+    border: 0.3rem solid colors.$yellow;
   }
 
-  h3 {
-    padding: 0;
-    color: colors.$dark;
-    font-size: medium;
-    margin: .6rem .8rem;
-  }
-
-  .social-media-container {
-    display: flex;
-    gap: 1rem;
-    flex-wrap: wrap;
-
-    a {
-      padding: .2rem;
-      border-radius: .2rem;
-      background: #fa8072;
-    }
-  }
-}
-
-#profile-container {
-  margin-top: 1.2rem;
-  padding: 1rem;
-  border-radius: .5rem;
-  background: colors.$yellow;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1rem;
-  justify-content: center;
-  /*.information-container {
-
-  }*/
-
-  .detail-container {
+  &__header {
     display: flex;
     flex-direction: column;
-    gap: .5rem;
+    align-items: center;
+    gap: 0.75rem;
+    margin: 1rem 0;
+  }
+
+  &__name {
+    margin: 0;
+    font-size: 1.75rem;
+  }
+
+  &__title-wrapper {
+    padding: 0.25rem 0.75rem;
+    background: colors.$yellow;
+    border-radius: 0.25rem;
+  }
+
+  &__title {
+    margin: 0;
+    color: colors.$dark;
+    font-size: 1rem;
+    font-weight: 600;
+  }
+
+  &__social {
+    display: flex;
+    gap: 1rem;
+    margin-top: 0.5rem;
+  }
+
+  &__social-link {
+    background-color: colors.$white;
+    padding: 0.5rem;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: transform 0.2s ease;
+
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
+
+  &__social-icon {
+    height: 1.5rem;
+    width: 1.5rem;
+  }
+
+  &__divider {
+    width: 100%;
+    border: none;
+    border-top: 1px solid colors.$gray;
+    margin: 0.5rem 0;
+  }
+
+  &__info {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
+    margin-top: 1rem;
+  }
+
+  &__info-item {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    background-color: colors.$yellow;
+    padding: 0.75rem;
+    border-radius: 0.5rem;
+  }
+
+  &__info-icon {
+    height: 2rem;
+    width: 2rem;
+    padding: 0.5rem;
+    background-color: colors.$white;
+    border-radius: 0.25rem;
+  }
+
+  &__info-title {
+    color: colors.$dark;
+    font-weight: 500;
   }
 }
 
-.icon-img {
-  height: 1.5rem;
-  width: 1.5rem;
-  border-radius: .2rem;
-  padding: .4rem;
-  border: 0.0rem solid #ffffff;
-  background-color: colors.$white;
-}
+@media screen and (max-width: 768px) {
+  .profile-card {
+    &__figure {
+      margin-top: -5rem;
+    }
 
-.info-icon {
-  font-size: 2.5rem;
+    &__image {
+      height: 8rem;
+      width: 10rem;
+    }
+
+    &__name {
+      font-size: 1.5rem;
+    }
+
+    &__title {
+      font-size: 0.9rem;
+    }
+
+    &__info-item {
+      padding: 0.5rem;
+      gap: 0.75rem;
+    }
+
+    &__info-icon {
+      height: 1.5rem;
+      width: 1.5rem;
+    }
+  }
 }
